--- a/src/backend/metal/Cargo.toml
+++ b/src/backend/metal/Cargo.toml
@@ -24,7 +24,8 @@ bitflags = "1.0"
 log = { version = "0.4", features = ["release_max_level_error"] }
 winit = { version = "0.17", optional = true }
 dispatch = { version = "0.1", optional = true }
-metal = { version = "0.13.0", features = ["private"] }
+#metal = { version = "0.13.0", features = ["private"] }
+metal = { git = "https://github.com/dati91/metal-rs.git", features = ["private"], branch = "metal_for_gecko" }
 foreign-types = "0.3"
 objc = "0.2.5"
 block = "0.1"
