--- a/src/backend/metal/Cargo.toml
+++ b/src/backend/metal/Cargo.toml
@@ -32,6 +32,7 @@ block = "0.1"
 cocoa = "0.18"
 core-graphics = "0.17"
 smallvec = "0.6"
-spirv_cross = "0.11.2"
+#spirv_cross = "0.11.2"
+spirv_cross = { git = "https://github.com/dati91/spirv_cross.git", branch = "metal_for_gecko" }
 parking_lot = "0.6.3"
 storage-map = "0.1.2"
